--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -539,6 +539,12 @@ nav.tabs {
     }
 }
 
+/*
+    Please remember these layouts need to comply with RTLB (right top, left bottom) and LTRB (left top, right bottom),
+    and WRAL (wrap right around left) and WLAR (wrap left around right) requirements,
+    as well as be adaptive, ie., that the empty columns collapse and the filled columns expand to fill the available space.
+*/
+
 .layout {
     position: relative;
     margin-bottom: 1em;
@@ -598,6 +604,14 @@ nav.tabs {
                 }
             }
             @include breakpoint(740px) {
+                display: flex;
+                >.layout__region--first {
+                    flex: 1 1 calc(50% - 0.5rem);
+                }
+                >.layout__region--second {
+                    flex: 1 1 calc(50% - 0.5rem);
+                }
+                
                 &.wlar {
                     display: block;
                     >.layout__region--first {
@@ -657,7 +671,17 @@ nav.tabs {
                 }
             }
             @include breakpoint(850px) {
+                display: flex;
                 grid-template-columns: 67% 33%;
+
+                >.layout__region--first {
+                    flex: 1 1 calc(67% - 1em);
+                }
+                >.layout__region--second {
+                    flex: 0 1 33%;
+                    max-width: 33%;
+                }
+
                 &.wlar {
                     display: block;
                     >.layout__region--first {
@@ -717,7 +741,16 @@ nav.tabs {
                 }
             }
             @include breakpoint(850px) {
+                display: flex;
                 grid-template-columns: 33% 67%;
+
+                >.layout__region--first {
+                    flex: 0 1 33%;
+                    max-width: 33%;
+                }
+                >.layout__region--second {
+                    flex: 1 1 calc(67% - 1rem);
+                }
                 &.wlar {
                     display: block;
                     >.layout__region--first {
@@ -777,7 +810,17 @@ nav.tabs {
                 }
             }
             @include breakpoint(900px) {
+                display: flex;
                 grid-template-columns: 75% 25%;
+
+                >.layout__region--first {
+                    flex: 1 1 calc(75% - 1rem);
+                }
+                >.layout__region--second {
+                    flex: 0 1 25%;
+                    max-width: 25%;
+                }
+
                 &.wlar {
                     display: block;
                     >.layout__region--first {
@@ -837,7 +880,17 @@ nav.tabs {
                 }
             }
             @include breakpoint(900px) {
+                display: flex;
                 grid-template-columns: 25% 75%;
+
+                >.layout__region--first {
+                    flex: 0 1 25%;
+                    max-width: 25%;
+                }
+                >.layout__region--second {
+                    flex: 1 1 calc(75% - 1rem);
+                }
+
                 &.wlar {
                     display: block;
                     >.layout__region--first {
